--- a/app/src/main/res/layout/logging_activity_1.xml
+++ b/app/src/main/res/layout/logging_activity_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.album.mundial.eslb.mundialalbum.MainActivity">
+    tools:context="com.album.mundial.eslb.mundialalbum.Activities.Logging_1">
 
     <TextView
         android:layout_width="wrap_content"
