--- a/app/src/main/res/layout/grupos_fragment_5.xml
+++ b/app/src/main/res/layout/grupos_fragment_5.xml
@@ -1,13 +1,87 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.album.mundial.eslb.mundialalbum.Fragments.GruposFragment_5">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <TextView
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:text="Grupos del Mundial" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/black"/>
+
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <GridLayout
+        android:layout_marginTop="7dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:columnCount="2"
+        android:rowCount="2">
+
+        <Button
+            android:id="@+id/grupoA"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:text="Grupo A" />
+
+        <Button
+            android:id="@+id/grupoB"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:text="Grupo B" />
+
+        <Button
+            android:id="@+id/grupoC"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:text="Grupo C" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:text="Grupo D" />
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:text="Grupo E" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:text="Grupo F" />
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginBottom="15dp"
+            android:text="Grupo G" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginBottom="15dp"
+            android:text="Grupo H" />
+    </GridLayout>
+
+    </ScrollView>
+</LinearLayout>
