--- a/app/src/main/res/layout/detalle_jugador_fragment_9.xml
+++ b/app/src/main/res/layout/detalle_jugador_fragment_9.xml
@@ -1,13 +1,72 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@android:color/white"
     android:layout_height="match_parent"
     tools:context="com.album.mundial.eslb.mundialalbum.Fragments.DetalleJugadorFragment_9">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="44dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="189dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/numeo_7"
+        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="86dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/argentina"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="210dp"
+        android:layout_height="280dp"
+        android:layout_marginStart="87dp"
+        android:layout_marginTop="9dp"
+        android:src="@drawable/antonie_greazman_francia_listo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="209dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="280dp"
+        android:alpha=".75"
+        android:src="@color/cardview_light_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="288dp"
+        android:text="Diego Armando Maradona:\nConsiderado el mejor futbolista\nde todos los tiempos, blabla..."
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="230dp"
+        android:layout_height="87dp"
+        android:layout_marginStart="77dp"
+        android:layout_marginTop="16dp"
+        android:text="Datos Técnicos:\n Edad: 29 años         Club: El Barza\nPosición: Medio Campista\nApodo: 'Pibe de Oro'"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+</android.support.constraint.ConstraintLayout>
