--- a/app/src/main/res/layout/drawer_fragment.xml
+++ b/app/src/main/res/layout/drawer_fragment.xml
@@ -9,16 +9,16 @@
     <RelativeLayout
         android:id="@+id/header_drawer"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:background="@color/header" >
+        android:layout_height="170dp"
+        android:background="@color/colorPrimary" >
 
         <ImageView
             android:id="@+id/image_header"
-            android:layout_width="70dp"
-            android:scaleType="fitCenter"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/perfil_imagen"
-            android:layout_height="70dp" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/foto_perfil" />
 
         <TextView
             android:id="@+id/nombre_jugador_header"
@@ -27,6 +27,8 @@
             android:layout_below="@+id/image_header"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="13dp"
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
             android:text="Eduardo Lévano" />
 
     </RelativeLayout>
