--- a/app/src/main/res/layout/vista_amigos_fragment_10.xml
+++ b/app/src/main/res/layout/vista_amigos_fragment_10.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.album.mundial.eslb.mundialalbum.Fragments.VistaAmigosFragment_10">
+    tools:context="com.album.mundial.eslb.mundialalbum.Fragments.AmigosFragment_10">
 
     <TextView
         android:layout_marginTop="7dp"
