--- a/app/src/main/res/layout/activity_intercambio_13.xml
+++ b/app/src/main/res/layout/activity_intercambio_13.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.album.mundial.eslb.mundialalbum.Activities.Central_4">
+    tools:context="com.album.mundial.eslb.mundialalbum.Activities.Intercambio_13">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
@@ -20,25 +19,22 @@
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <include
-                layout="@layout/toolbar"
-                android:id="@+id/toolbar"/>
+                android:id="@+id/toolbar"
+                layout="@layout/toolbar" />
 
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/drawer_fragment"
-        android:name="com.album.mundial.eslb.mundialalbum.drawer.DrawerFragment"
-        android:layout_width="220dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:layout="@layout/drawer_fragment"
-        tools:layout="@layout/drawer_fragment"/>
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</android.support.v4.widget.DrawerLayout>
+</android.support.constraint.ConstraintLayout>
