--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="sedes">#0ba471</color>
     <color name="fixture">#5699d9</color>
     <color name="album">#b5d4f2</color>
+    <color name="futbolistas">#da3838</color>
 </resources>
