--- a/app/src/main/res/layout/item_pais.xml
+++ b/app/src/main/res/layout/item_pais.xml
@@ -17,6 +17,9 @@
         android:id="@+id/nombreItem"
         android:layout_width="134dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:gravity="center_horizontal"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="18sp" />
 </LinearLayout>
