--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,8 @@
     <color name="fixture">#5699d9</color>
     <color name="album">#b5d4f2</color>
     <color name="futbolistas">#da3838</color>
-    <color name="background_sede">#a60ca709</color>
+    <color name="background_sede">#a652b650</color>
+    <color name="background_fixture">#985184d7</color>
+    <color name="background_equipos">#a6f22929</color>
+
 </resources>
