--- a/app/src/main/res/layout/album_fragment_12.xml
+++ b/app/src/main/res/layout/album_fragment_12.xml
@@ -1,60 +1,80 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/badge_height_padding"
-
-
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:layout_gravity="center"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/badge_height_padding"
     tools:context="com.album.mundial.eslb.mundialalbum.Fragments.AlbumFragment_12">
-
 
     <Button
         android:id="@+id/futbolistasButton"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
 
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:background="@color/futbolistas"
         android:fontFamily="@font/roboto_thin"
         android:text="Futbolistas"
+
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/equiposButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
+
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="2dp"
         android:background="@color/equipos"
         android:fontFamily="@font/roboto_thin"
         android:text="Equipos"
+
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/futbolistasButton"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="78dp" />
 
     <Button
         android:id="@+id/sedesButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
+
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="2dp"
         android:background="@color/sedes"
         android:fontFamily="@font/roboto_thin"
         android:text="Sedes"
+
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/equiposButton"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="208dp" />
 
     <Button
         android:id="@+id/fixtureButton"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
+
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="2dp"
         android:background="@color/fixture"
         android:fontFamily="@font/roboto_thin"
         android:text="Fixture"
+
         android:textSize="30sp"
-        android:textStyle="bold" />
-</RelativeLayout>
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sedesButton"
+
+        tools:layout_editor_absoluteX="16dp" />
+</android.support.constraint.ConstraintLayout>
