--- a/app/src/main/res/layout/album_fragment_12.xml
+++ b/app/src/main/res/layout/album_fragment_12.xml
@@ -14,10 +14,12 @@
 
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:background="@color/futbolistas"
+
+        android:background="@drawable/estilo_futbolistas"
+        android:textColor="#ffffffff"
+        android:layout_marginBottom="@dimen/badge_width_padding"
         android:fontFamily="@font/roboto_thin"
         android:text="Futbolistas"
-
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,28 +29,31 @@
     <Button
         android:id="@+id/equiposButton"
 
+        android:layout_marginBottom="@dimen/badge_width_padding"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="2dp"
-        android:background="@color/equipos"
+        android:background="@drawable/estilo_equipos"
+        android:textColor="#ffffffff"
+        android:paddingEnd="8dp"
         android:fontFamily="@font/roboto_thin"
-        android:text="Equipos"
 
+        android:text="Equipos"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/futbolistasButton"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="78dp" />
+        app:layout_constraintTop_toBottomOf="@id/futbolistasButton" />
 
     <Button
         android:id="@+id/sedesButton"
 
+        android:layout_marginBottom="@dimen/badge_width_padding"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="2dp"
-        android:background="@color/sedes"
+        android:background="@drawable/estilo_sedes"
+        android:textColor="#ffffffff"
         android:fontFamily="@font/roboto_thin"
         android:text="Sedes"
 
@@ -63,10 +68,12 @@
     <Button
         android:id="@+id/fixtureButton"
 
+        android:layout_marginBottom="@dimen/badge_width_padding"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="2dp"
-        android:background="@color/fixture"
+        android:background="@drawable/estilo_fixture"
+        android:textColor="#ffffffff"
         android:fontFamily="@font/roboto_thin"
         android:text="Fixture"
 
