--- a/app/src/main/res/layout/item_pais.xml
+++ b/app/src/main/res/layout/item_pais.xml
@@ -20,6 +20,8 @@
         android:layout_marginTop="2dp"
         android:gravity="center_horizontal"
         android:text="TextView"
+        android:textAllCaps="true"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="18sp" />
+        android:textSize="16sp"
+        android:textStyle="bold|italic" />
 </LinearLayout>
