--- a/app/src/main/res/layout/item_sticker.xml
+++ b/app/src/main/res/layout/item_sticker.xml
@@ -23,7 +23,7 @@
         android:id="@+id/imageView12"
         android:layout_width="55dp"
         android:layout_height="28dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="6dp"
         android:layout_marginTop="16dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="@+id/imageItem"
@@ -37,8 +37,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
+        android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="24sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
